# root

./: .gitignore  CMakeLists.txt
include/: draw.h  entity.h  globals.h  input.h  simulation.h  types.h  window.h  world.h
src/: draw.c  entity.c  input.c  main.c  simulation.c  window.c  world.c
